대용량 트래픽&데이터 처리 - 6주차 - Redis 세팅